Fix footer links on mobile

--- a/themes/crocuspaperi/static/css/main.css
+++ b/themes/crocuspaperi/static/css/main.css
@@ -260,7 +260,7 @@ body {
 
 @media (max-width: 550px) {
   .footer .links {
-    width: 17rem;
+    width: 22rem;
   }
 
   .footer .links a {
